# kuwahara_wgpu

./: Cargo.toml  README.md  build.rs  index.html
docs/: index.html  kuwahara-filter-8729cea66f5b4c60_bg.wasm  kuwahara-filter-a0b43e1d44c81020_bg.wasm  kuwahara-filter-ecedbe4cfc1aea6e_bg.wasm
shaders/: gaussian_blur.wgsl  kuwahara.wgsl  sobel.wgsl
src/: app.rs  gpu.rs  main.rs  params.rs
