[package]
name = "kuwahara-filter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kuwahara-filter"
path = "src/main.rs"

[dependencies]
eframe = { version = "=0.33.3", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "x11",
    "wayland",
] }
anyhow ="1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
rfd = {version = "0.17.2", features = ["file-handle-inner"]}
pollster = "0.4"
encase = "0.12.0"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5"
wgpu = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.3", default-features=false, features = ["wgpu"] }
wgpu = {version = "*", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", default-features = false, features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
] }
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
